# autonom-commodities

./: .gitignore  Cargo.toml  README.md
config/: oracle.example.toml
src/: config.rs  funding.rs  lib.rs  metrics.rs  oracle.rs  publishing.rs  risk.rs  types.rs
src/index/: cfd.rs  cfd_consensus.rs  cmf.rs  mod.rs
src/providers/: cfd.rs  cme.rs  mod.rs  vi
