[package]
name = "autonom"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "Apache-2.0"
repository = "https://github.com/yourorg/autonom"
description = "Autonom operator / web2 price aggregator"
# Use the modern dependency resolver
resolver = "2"

[[bin]]
name = "operator"
path = "src/bin/operator.rs"

[features]
# Turn providers on/off at compile-time if desired
default = []
dxfeed = []
owninja = []

[dependencies]
alloy = { version = "0.11.1", features = ["full"] }
anchor-lang = "0.31.1"
async-trait = "0.1.88"
axum = "0.8.1"
base64 = "0.22.1"
backon = "1.5.0"
chrono = "0.4.40"
chrono-tz = "0.10.3"
clap = { version = "4.5.31", features = ["derive"] }
eyre = "0.6.12"
fastrand = "2.3.0"
futures = "0.3.31"
k256 = "0.13.4"
once_cell = "1.19"
ordered-float = "5.0.0"
phf = { version = "0.11", features = ["macros"] }
prometheus = "0.13"
prost = "0.13.5"
rand = "0.9.0"
rand_core = "0.6"
rand_distr = "0.5.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots", "gzip"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_with = "3.14.0"
smallvec = "1.15.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "macros", "migrate"] }
# Drop "uuid" if you don't map UUID columns in SQLite:
# sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "macros", "migrate", "uuid"] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.5.11"
tonic = "0.13.0"
tower = { version = "0.5.2", features = ["load-shed"] }
tower-http = { version = "0.5", features = [
    "trace", "cors", "timeout", "request-id", "set-header",
    "sensitive-headers", "limit",
    "compression-br", "compression-deflate", "compression-gzip", "compression-zstd"
]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
toml_edit = "0.22"
sha2 = "0.10.8"
hex = "0.4.3" # (optional: if you plan to mutate TOML at runtime)

[dev-dependencies]
# put test-only crates here if needed

[build-dependencies]
tonic-build = "0.13.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

